--- a/lacework_agent_new/requirements.txt
+++ b/lacework_agent_new/requirements.txt
@@ -1,5 +1,9 @@
-openai>=1.0.0
+# OpenAI dependencies
+openai>=1.3.0
 python-dotenv>=1.0.0
+
+# Web framework dependencies
 flask>=2.0.0
+
 # Optional: uncomment to enable OpenAI Agents SDK support
 # openai-agents
