--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
+# Web framework dependencies
 fastapi>=0.104.0
 uvicorn>=0.23.2
+flask>=2.0.0
+
+# LangChain dependencies
 langchain>=0.0.335
 langchain-community>=0.0.10
 langchain-experimental>=0.0.42
 langchain-openai>=0.0.2
 pydantic>=2.4.2
-python-dotenv>=1.0.0
+
+# OpenAI dependencies
 openai>=1.3.0
+python-dotenv>=1.0.0
+
+# Vector store dependencies
 faiss-cpu>=1.7.4
 tiktoken>=0.5.1
+
+# Optional: uncomment to enable OpenAI Agents SDK support
+ openai-agents
